# glfw-beef

./: .gitignore  .gitmodules  BeefProj.toml  CMakeLists.txt  README.md
Setup/: BeefProj.toml  BeefSpace.toml  CMakeLists.txt
Setup/src/: Program.bf
src/: Glfw.bf  GlfwAllocate.bf  GlfwInput.bf  GlfwWindow.bf
src/Impl/: GlfwInitVersionErrorImpl.bf  GlfwWindowImpl.bf
